--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -430,7 +430,13 @@ btnsWindowUserChange{
 
 
 /* Медиа-запрос для мобильных устройств (ширина экрана до 768px) */
-@media (max-width: 800px) {
+@media (max-width: 768px) {
+
+    body{
+        width: 100%;
+        height: 100%;
+    }
+
     .col-side-all-zones{
         background: linear-gradient(45deg, black, transparent);
         border-radius: 5%;
