--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@
             <h1>Управление теплицей</h1>
             <div id="headerButton">
             <form id = "formLogout" th:action="@{/logout}" method="post">
-                <input id = "inputLogout" type="button" value="Выход"/>
+                <input id = "inputLogout" type="submit" value="Выход"/>
             </form></div>
         </div>
     </header>
