--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -109,13 +109,13 @@ header{
 
 #windowUsersSettings{
     position: absolute;
-    top: 10dvh;
-    left: 10dvw;
-    width: 80dvw;
-    height: 80dvh;
+    top: 10%;
+    left: 10%;
+    width: 80%;
+    height: 80%;
     background: linear-gradient(8deg, black, #464444fc);
-    border-radius: 3dvh;
-    border: 0.1dvh solid;
+    border-radius: 3%;
+    border: thin solid;
     border-color: #0d6efd ;
 }
 
@@ -149,24 +149,27 @@ header{
 
 #tableContainer{
     overflow: auto;
-    height: 86%;
-    width: 80%;
+    height: auto;
+    max-height: 80%;
+    width: 90%;
     margin: auto;
-    font-size: 1.4dvw;
-    color: white;
+    font-size: 100%;
+
 }
 
 #imgForBtn{
-    width: 100%;
+    width: 150%;
     height: auto;
 }
 
 #windowUserCreate{
-    font-size: 2dvh;
+
+    text-align: center;
+    font-size: 80%;
     color: #000000;
     border: 0.2dvh solid;
     border-radius: 3%;
-    width: 20%;
+    width: 22%;
     height: auto;
     padding: 0.5%;
     background: linear-gradient(8deg, black, #8c8ee4fc);
@@ -175,9 +178,16 @@ header{
     left: 15%;
 }
 
+.form-control{
+    font-size: 70%;
+}
+
+.form-select{
+    font-size: 70%;
+}
 
 #windowUserChange{
-    font-size: 2dvh;
+    font-size: 70%;
     color: #000000;
     border: 0.2dvh solid;
     border-radius: 3%;
@@ -197,16 +207,19 @@ header{
 #inputLogout{
     height: 100%;
     color: black;
-    margin-left: 1%;
+    margin-right: 1%;
     border-radius: 4%;
     border: thin;
     background: #fffcfc;
 }
 
 #divBtnUserChange{
+    display: flex;
     padding: 2%;
     width: 100%;
     margin: auto;
+    font-size: 70%;
+    justify-content: space-evenly;
 }
 
 #divNameUser{
@@ -215,7 +228,9 @@ header{
 }
 
 #spanUser{
-    width: 40%;
+    display: flex;
+    align-items: center;
+    width: 50%;
 }
 
 #divPasswordUser{
@@ -230,14 +245,14 @@ header{
 
 #btnsWindowUser{
     border-style: solid;
-    width: 40%;
-    margin-left: 5%;
+    width: 47%;
+    margin-left: 2%;
 }
 
-btnsWindowUserChange{
-    border-style: solid;
-    width: 30%;
-    margin-left: 5%;
+#btnsWindowUserChange{
+    border-style: none;
+    border-radius: 4%;
+
 }
 
 #divBtnUser{
@@ -265,6 +280,7 @@ btnsWindowUserChange{
 
 #userTable{
     color: white;
+    border-color: #7385ff;
 }
 
 #paramName{
@@ -276,17 +292,19 @@ btnsWindowUserChange{
 
 #headerForWindow{
     height: 8%;
+    display: flex;
+    margin: auto;
 }
 
 #openWindowNewUserBtn{
     border-style: unset;
-    font-size: 2dvh;
-    background: #ffffffd4;
+    font-size: 70%;
+    background: #fffffffc;
     margin-left: 2%;
     margin-top: 0.5%;
     width: 20%;
     height: 70%;
-    border-radius: 2dvh;
+    border-radius: 4%;
 }
 
 .header{
@@ -308,10 +326,7 @@ btnsWindowUserChange{
 
 #close-btn-for-usersSetting{
     color: #cf191e;
-    position: absolute;
-    left: 96.2%;
-    top: 0dvh;
-    font-size: 2dvw;
+    margin: auto;
     border-style: none;
     background-color: rgba(212,39,39,0);
 }
