--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -249,12 +249,17 @@ header{
     border-style: none;
     width: 47%;
     margin-left: 2%;
+    background: white;
+    color: black;
+    text-align: center;
 }
 
 #btnsWindowUserChange{
     border-style: none;
     border-radius: 4%;
-
+    background: white;
+    color: black;
+    text-align: center;
 }
 
 #divBtnUser{
@@ -520,18 +525,24 @@ header{
 
     #divBtnUserChange{
         padding: 1%;
-        font-size: 57%;
+        font-size: 53%;
     }
 
+
     #openWindowNewUserBtn{
+        border-style: unset;
+        border-radius: 4%;
+        background: #fffffffc;
+        margin-top: 0.5%;
         font-size: 100%;
         margin-left: 5%;
         width: 70%;
     }
 
     #headerButton{
-        font-size: 80%;
-        height: 50%;
+        color: black;
+        font-size: 60%;
+        height: 40%;
         margin-top: auto;
         margin-bottom: auto;
         margin-right: 1%;
