--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -45,7 +45,6 @@ header{
 
 .mode-char{
     vertical-align: middle;
-    display: inline-block;
     font-size: x-large;
     color: #cf191e;
 }
@@ -82,7 +81,9 @@ header{
 #paramSettings{
     overflow: auto;
     text-align: center;
-    font-size: 120%;
+    display: flex;
+    align-items: center;
+    font-size: 1.1dvw;
     background-color: #9dd2fffa;
     padding: 0.3%;
     width: 25%;
@@ -409,10 +410,9 @@ header{
     width: 80%;
 }
 .window-param{
-
+    margin-right: 2%;
     color:white;
     width: 19%;
-    display: inline-block;
     text-align: center;
     background: black;
     border-radius: 10%;
