--- a/src/main/resources/templates/home2.html
+++ b/src/main/resources/templates/home2.html
@@ -108,7 +108,7 @@
                 <span class="text-center"> Влажность почвы</span>
             </div>
             <div class="window-param" onclick="openParamSettingsWithLowHigh(this,'Влажность почвы')">
-                <span id = "humiditySoilRealTwo" class="text-center">20.0Т</span>
+                <span id = "humiditySoilRealTwo" class="text-center">20.0%</span>
             </div>
             <div class="mode-char">
                 <span id = "modeHumiditySoilTwo" class="text-center">А</span>
@@ -143,7 +143,7 @@
                 <span class="text-center"> Температура почвы</span>
             </div>
             <div class="window-param" onclick="openParamSettings(this,'Температура почвы')">
-                <span  id = "temperatureSoilRealThree" class="text-center">20.0Т</span>
+                <span  id = "temperatureSoilRealThree" class="text-center">20.0%</span>
             </div>
             <div class="mode-char">
                 <span id = "modeSoilRealThree" class="text-center">А</span>
@@ -228,7 +228,7 @@
                 <span class="text-center" >Мощность приточного ветилятора</span>
             </div>
             <div class="window-param" onclick="openParamSettings(this,'Мощность приточного ветилятора')">
-                <span id="powerVentilatorInReal" class="text-center">20.5Т</span>
+                <span id="powerVentilatorInReal" class="text-center">20.5%</span>
             </div>
             <div class="mode-char">
                 <span id = "modeVentilation" class="text-center">А</span>
@@ -239,7 +239,7 @@
                 <span class="text-center" >Мощность вытяжного вентилятора</span>
             </div>
             <div class="window-param" onclick="openParamSettingsWithoutModeNumber(this,'Мощность вытяжного вентилятора')">
-                <span id="powerVentilatorOutReal"  class="text-center">20.5Т</span>
+                <span id="powerVentilatorOutReal"  class="text-center">20.5%</span>
             </div>
         </div>
 
@@ -250,7 +250,7 @@
             <span  class="text-center" > Уровень бака полива</span>
         </div>
         <div class="window-param">
-            <span id="waterTankLevelHumiditySoilReal" class="text-center">20.5Т</span>
+            <span id="waterTankLevelHumiditySoilReal" class="text-center">20.5%</span>
         </div>
     </div>
     <br>
@@ -294,7 +294,7 @@
             <span  class="text-center" >Влажность на улице</span>
         </div>
         <div class="window-param">
-            <span id="humidityAirStreetReal" class="text-center">20.5Т</span>
+            <span id="humidityAirStreetReal" class="text-center">20.5%</span>
         </div>
     </div>
     </aside>
@@ -304,7 +304,7 @@
                 <span class="text-center"> Общий уровень света</span>
             </div>
             <div class="window-param" onclick="openParamSettings(this,'Общий уровень света')">
-                <span id = "whiteLightReal" class="text-center">20.0Т</span>
+                <span id = "whiteLightReal" class="text-center">20.0lx</span>
             </div>
             <div class="mode-char">
                 <span id = "modeLight" class="text-center">А</span>
@@ -352,7 +352,7 @@
                 <span class="text-center">Вентилятор на подачу CO2</span>
             </div>
             <div class="window-param" onclick="openParamSettingsWithoutModeText(this,'Вентилятор на подачу CO2')">
-                <span id = "workStatusVentilatorCO2Real"  class="text-center">Вентилятор на подачу CO2</span>
+                <span id = "workStatusVentilatorCO2Real"  class="text-center">ВКЛ</span>
             </div>
         </div>
     </aside>
