--- a/src/main/resources/templates/home2.html
+++ b/src/main/resources/templates/home2.html
@@ -32,7 +32,7 @@
                 <span  id = "temperatureSoilRealOne" class="text-center">20.0Т</span>
             </div>
             <div class="mode-char">
-                <span id = "modeSoilRealOne" class="text-center">А</span>
+                <span id = "modeTempSoilOne" class="text-center">А</span>
             </div>
         </div>
 
@@ -89,7 +89,7 @@
                 <span  id = "temperatureSoilRealTwo" class="text-center">20.0Т</span>
             </div>
             <div class="mode-char">
-                <span id = "modeSoilRealTwo" class="text-center">А</span>
+                <span id = "modeTempSoilTwo" class="text-center">А</span>
             </div>
         </div>
 
@@ -146,7 +146,7 @@
                 <span  id = "temperatureSoilRealThree" class="text-center">20.0%</span>
             </div>
             <div class="mode-char">
-                <span id = "modeSoilRealThree" class="text-center">А</span>
+                <span id = "modeTempSoilThree" class="text-center">А</span>
             </div>
         </div>
 
