--- a/src/main/resources/templates/home2.html
+++ b/src/main/resources/templates/home2.html
@@ -209,7 +209,7 @@
             <div class="name-param">
                 <span class="text-center">Мощность обегрева помещения</span>
             </div>
-            <div class="window-param" onclick="openParamSettingsWithoutModeNumber(this,'Клапан горячей воды')">
+            <div class="window-param" onclick="openParamSettingsWithoutModeNumber(this,'Мощность обогрева помещения')">
                 <span id = "powerTempAirReal" class="text-center">20.0%</span>
             </div>
         </div>
