change ventilation, co2, light logic

--- a/src/main/resources/templates/home2.html
+++ b/src/main/resources/templates/home2.html
@@ -236,10 +236,10 @@
         </div>
         <div class="param-setting">
             <div class="name-param">
-                <span class="text-center" >Мощность вытяжного вентилятора</span>
+                <span class="text-center" >Положение вытяжных клапанов</span>
             </div>
-            <div class="window-param" onclick="openParamSettingsWithoutModeNumber(this,'Мощность вытяжного вентилятора')">
-                <span id="powerVentilatorOutReal"  class="text-center">20.5%</span>
+            <div class="window-param" onclick="openParamSettingsWithoutModeNumber(this,'Положение вытяжных клапанов')">
+                <span id="powerFlapOutReal"  class="text-center">20.5%</span>
             </div>
         </div>
 
@@ -325,7 +325,7 @@
                 <span class="text-center">Уровень СО2 в помощении</span>
             </div>
             <div class="window-param">
-                <span id="carbonDioxideReal" class="text-center">20.0%</span>
+                <span id="carbonDioxideReal"  class="text-center">20.0%</span>
             </div>
             <div class="mode-char">
                 <span id = "modeCarbonDioxide" class="text-center">А</span>
@@ -335,8 +335,8 @@
             <div class="name-param">
                 <span class="text-center">Уровень балона CO2</span>
             </div>
-            <div class="window-param">
-                <span id="carbonTankLvlReal" class="text-center">20.0%</span>
+            <div class="window-param" onclick="openParamSettingsWithLowHigh(this,'Уровень CO2')">
+                <span id="carbonDioxideTankLevelReal" class="text-center">20.0%</span>
             </div>
         </div>
         <div class="param-setting">
