change ventilation, co2, light logic

--- a/src/main/resources/templates/home2.html
+++ b/src/main/resources/templates/home2.html
@@ -217,7 +217,7 @@
             <div class="name-param">
                 <span  class="text-center" >Температура на улице</span>
             </div>
-            <div class="window-param">
+            <div class="window-param-no-click">
                 <span id="temperatureAirStreetReal" class="text-center">20.5Т</span>
             </div>
         </div>
