--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -7,7 +7,7 @@ body{background-image: url("../images/bk2.webp");
     min-height: 100%;
     height: 100%;
     width: 100%;
-    color: #dfeddc;
+    color: #e0e8de;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -81,6 +81,7 @@ header{
 }
 
 #paramSettings{
+    color: black;
     overflow: auto;
     text-align: center;
     font-size: 120%;
@@ -93,6 +94,7 @@ header{
 
 
 #paramSettingsWithoutMode{
+    color: black;
     overflow: auto;
     text-align: center;
     font-size: 120%;
@@ -420,6 +422,17 @@ header{
     border-width: thin;
 }
 
+.window-param-no-click{
+    margin-right: 2%;
+    width: 19%;
+    text-align: center;
+    background: black;
+    border-radius: 10%;
+    border-style: solid;
+    border-color: navy;
+    border-width: thin;
+}
+
 
 #list-zones {
     padding-bottom: 2dvh;
@@ -497,6 +510,7 @@ header{
     }
 
     #paramSettings{
+        color: black;
         overflow: auto;
         text-align: center;
         font-size: 150%;
@@ -508,6 +522,7 @@ header{
     }
 
     #paramSettingsWithoutMode{
+        color: black;
         overflow: auto;
         text-align: center;
         font-size: 150%;
@@ -519,6 +534,7 @@ header{
     }
 
     #main-header h1 {
+        color: #e0e8de;
         margin: auto;
         vertical-align: middle;
         font-size: large;
