change ventilation, co2, light logic

--- a/src/main/resources/templates/home2.html
+++ b/src/main/resources/templates/home2.html
@@ -249,7 +249,7 @@
         <div class="name-param">
             <span  class="text-center" > Уровень бака полива</span>
         </div>
-        <div class="window-param">
+        <div class="window-param-no-click">
             <span id="waterTankLevelHumiditySoilReal" class="text-center">20.5%</span>
         </div>
     </div>
@@ -285,7 +285,7 @@
         <div class="name-param">
             <span class="text-center">Уровень в баке парообразователя</span>
         </div>
-        <div class="window-param">
+        <div class="window-param-no-click">
             <span id = "waterTankLevelHumidityAirReal" class="text-center">100%</span>
         </div>
     </div>
@@ -293,7 +293,7 @@
         <div class="name-param">
             <span  class="text-center" >Влажность на улице</span>
         </div>
-        <div class="window-param">
+        <div class="window-param-no-click">
             <span id="humidityAirStreetReal" class="text-center">20.5%</span>
         </div>
     </div>
@@ -335,7 +335,7 @@
             <div class="name-param">
                 <span class="text-center">Уровень балона CO2</span>
             </div>
-            <div class="window-param">
+            <div class="window-param-no-click">
                 <span id="carbonDioxideTankLevelReal" class="text-center">20.0%</span>
             </div>
         </div>
