--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -15,6 +15,7 @@ body{background-image: url("../images/bk2.webp");
     font-family: "DejaVu Sans Mono", monospace;}
 
 #main-header h1{
+    color: #e0e8de;
     margin:auto;
     vertical-align:middle;
     font-size: xx-large;
@@ -349,6 +350,10 @@ header{
     background: white;
     color: black;
     cursor: pointer;
+}
+
+.window-param-no-click:hover{
+    cursor: not-allowed;
 }
 
 #textMode{
