change ventilation, co2, light logic

--- a/src/main/resources/templates/home2.html
+++ b/src/main/resources/templates/home2.html
@@ -303,7 +303,7 @@
             <div class="name-param">
                 <span class="text-center"> Общий уровень света</span>
             </div>
-            <div class="window-param" onclick="openParamSettings(this,'Общий уровень света')">
+            <div class="window-param" onclick="openParamSettingsForLight(this,'Общий уровень света')">
                 <span id = "whiteLightReal" class="text-center">20.0lx</span>
             </div>
             <div class="mode-char">
