change ventilation, co2, light logic

--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -368,6 +368,11 @@ header{
     justify-content: center;
     background-size: 15%;
 }
+.timeTask{
+    display: flex;
+    margin-bottom: 5px;
+}
+
 .mode{
     display: flex;
     margin-bottom: 5px;
