change LX PM TO INT

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -324,7 +324,7 @@
             <div class="name-param">
                 <span class="text-center">Уровень СО2 в помощении</span>
             </div>
-            <div class="window-param" onclick="openParamSettingsWithLowHigh(this,'Уровень CO2')">
+            <div class="window-param" onclick="openParamSettingsForCo2(this,'Уровень CO2')">
                 <span id="carbonDioxideReal"  class="text-center">20.0%</span>
             </div>
             <div class="mode-char">
