change LX PM TO INT

--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -404,7 +404,7 @@ header{
     justify-content: center;
     text-align: center;
 }
-#taskMinLight{
+#inputMinLight{
     width: 40%;
     display: flex;
     justify-content: center;
