change LX PM TO INT

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -374,6 +374,7 @@
     switch (window.role){
         case "ROLE_ADMIN":
             addButtonOpenWindowUserSettings();
+            addButtonOpenWindowPIDSettings();
             break;
         case "ROLE_WORKER":
             break;
