--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -138,6 +138,15 @@ header{
     background: #fffcfc;
 }
 
+#btnOpenWindowSettignsPID{
+    color: black;
+    margin-left: 2%;
+    border-radius: 4%;
+    height: 100%;
+    border: thin;
+    background: #fffcfc;
+}
+
 #updateParamBtn{
     width: 77%;
     color: #d9eff5;
@@ -440,6 +449,19 @@ header{
     margin-top: 7px;
     width: 80%;
 }
+
+.window-pid{
+    margin-right: 2%;
+    width: 19%;
+    text-align: center;
+    background: black;
+    border-radius: 10%;
+    border-style: solid;
+    border-color: navy;
+    border-width: thin;
+}
+
+
 .window-param{
     margin-right: 2%;
     width: 19%;
