change LX PM TO INT

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -359,7 +359,7 @@
 </div>
 
 
-
+<script th:inline="javascript" type="text/javascript" th:src="@{jsFiles/pidRedactor.js}"></script>
 <script th:inline="javascript" type="text/javascript" th:src="@{jsFiles/objectRedactor.js}"></script>
 <script th:inline="javascript" type="text/javascript" th:src="@{jsFiles/getRequests.js}"></script>
 <script th:inline="javascript" type="text/javascript" th:src="@{jsFiles/patchRequests.js}"></script>
