--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -64,7 +64,6 @@ header{
 #side-all-zone span:before{
     padding-right: 1dvw;
     vertical-align: middle;
-    content: url("../images/home32.png");
 }
 
 
@@ -145,6 +144,7 @@ header{
     height: 100%;
     border: thin;
     background: #fffcfc;
+    white-space: nowrap;
 }
 
 #updateParamBtn{
@@ -640,7 +640,7 @@ header{
         height: 50%;
         margin-top: auto;
         margin-bottom: auto;
-        margin-right: 1%;
+        margin-right: 2%;
         display: flex;
     }
 
