--- a/src/main/resources/static/style/main.css
+++ b/src/main/resources/static/style/main.css
@@ -636,7 +636,7 @@ header{
         color: #e0e8de;
         margin: auto;
         vertical-align: middle;
-        font-size: inherit;
+        font-size: small;
     }
 
     #tableContainer{
