--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -355,6 +355,14 @@
                 <span id = "workStatusVentilatorCO2Real"  class="text-center">ВКЛ</span>
             </div>
         </div>
+        <div class="param-setting">
+            <div class="name-param">
+                <span class="text-center">Уровень балона CO2</span>
+            </div>
+            <div class="window-param-no-click">
+                <span id="carbonDioxideStreetLevelReal" class="text-center">0 ppm</span>
+            </div>
+        </div>
     </aside>
 </div>
 
