--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -360,7 +360,7 @@
                 <span class="text-center">Уровень балона CO2</span>
             </div>
             <div class="window-param-no-click">
-                <span id="carbonDioxideStreetLevelReal" class="text-center">0 ppm</span>
+                <span id="carbonDioxideStreetReal" class="text-center">0 ppm</span>
             </div>
         </div>
     </aside>
