--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -357,7 +357,7 @@
         </div>
         <div class="param-setting">
             <div class="name-param">
-                <span class="text-center">Уровень балона CO2</span>
+                <span class="text-center">Уровень CO2 на улице</span>
             </div>
             <div class="window-param-no-click">
                 <span id="carbonDioxideStreetReal" class="text-center">0 ppm</span>
