add checker max power

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -207,7 +207,7 @@
 
         <div class="param-setting">
             <div class="name-param">
-                <span class="text-center">Мощность обегрева помещения</span>
+                <span class="text-center">Мощность обогрева помещения</span>
             </div>
             <div class="window-param" onclick="openParamSettingsWithoutModeNumber(this,'Мощность обогрева помещения')">
                 <span id = "powerTempAirReal" class="text-center">20.0%</span>
